--- a/CppNagyHF/CppNagyHF.vcxproj
+++ b/CppNagyHF/CppNagyHF.vcxproj
@@ -145,7 +145,9 @@
     <ClCompile Include="vector.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ControllerModel.hpp" />
     <ClInclude Include="Game.hpp" />
+    <ClInclude Include="ModelParams.hpp" />
     <ClInclude Include="position.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
