--- a/CppNagyHF/CppNagyHF.vcxproj.filters
+++ b/CppNagyHF/CppNagyHF.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Game.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
+    <ClCompile Include="RandomModel.cpp">
+      <Filter>Source Files\Model</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.hpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files\Model</Filter>
     </ClInclude>
     <ClInclude Include="ModelParams.hpp">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="RandomModel.hpp">
       <Filter>Source Files\Model</Filter>
     </ClInclude>
   </ItemGroup>
