--- a/CppNagyHF/CppNagyHF.vcxproj
+++ b/CppNagyHF/CppNagyHF.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Apple.cpp" />
     <ClCompile Include="CppNagyHF.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameReport.cpp" />
     <ClCompile Include="GameUtils.cpp" />
     <ClCompile Include="ConnectionGene.cpp" />
     <ClCompile Include="matrix.hpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Apple.hpp" />
     <ClInclude Include="ControllerModel.hpp" />
     <ClInclude Include="Game.hpp" />
+    <ClInclude Include="GameReport.hpp" />
     <ClInclude Include="GameUtils.hpp" />
     <ClInclude Include="ConnectionGene.hpp" />
     <ClInclude Include="ModelParams.hpp" />
