--- a/CppNagyHF/CppNagyHF.vcxproj.filters
+++ b/CppNagyHF/CppNagyHF.vcxproj.filters
@@ -55,6 +55,9 @@
       <Filter>Source Files\Model</Filter>
     </ClCompile>
     <ClCompile Include="GameReport.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="NeatTrainer.cpp">
       <Filter>Source Files\Model</Filter>
     </ClCompile>
   </ItemGroup>
@@ -94,6 +97,12 @@
     </ClInclude>
     <ClInclude Include="GameReport.hpp">
       <Filter>Source Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="NeatTrainer.hpp">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelUtils.hpp">
+      <Filter>Source Files\Model</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
