--- a/CppNagyHF/CppNagyHF.vcxproj.filters
+++ b/CppNagyHF/CppNagyHF.vcxproj.filters
@@ -105,7 +105,7 @@
       <Filter>Source Files\Model</Filter>
     </ClInclude>
     <ClInclude Include="FitnessFunction.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files\Model</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
