--- a/CppNagyHF/CppNagyHF.vcxproj.filters
+++ b/CppNagyHF/CppNagyHF.vcxproj.filters
@@ -108,4 +108,7 @@
       <Filter>Source Files\Model</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="CustomDebuggerVisualization.natvis" />
+  </ItemGroup>
 </Project>
