JPORTA compatible!!!! (releaSE = jporta)

--- a/CppNagyHF/CppNagyHF.vcxproj.filters
+++ b/CppNagyHF/CppNagyHF.vcxproj.filters
@@ -110,6 +110,9 @@
     <ClInclude Include="FitnessFunction.hpp">
       <Filter>Source Files\Model</Filter>
     </ClInclude>
+    <ClInclude Include="Direction.hpp">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="CustomDebuggerVisualization.natvis" />
